--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.536.0",
+    "motion": "^12.23.12",
     "next": "14.2.31",
     "react": "^18",
     "react-dom": "^18"
@@ -18,6 +19,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^5.0.50",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
